@@ -1,6 +1,7 @@
 <pre>
 2007-xx-xx:
 	* version 0.5.1
+	* commandline history now works properly on Windows
 	* filename completion now works on Windows
 	* the Bookmarks Toolbar Folder is now read when bookmarks are first
 	  loaded - it was skipped entirely in the past
